syntax = "proto3";

package proto;

option go_package = "meta-integration/gen/proto/meta;meta";

enum Category {
  CATEGORY_UNSPECIFIED = 0;
  MARKETING = 1;
  UTILITY = 2;
  AUTHENTICATION = 3;
}

message MetaRegisterNumberBody {
  string messaging_product = 1;
}

message MetaRegisterNumberResponse {}

message MetaEditTemplateBody {
  Category category = 1;
  map<string, string> components = 2;
}

message MetaEditTemplateResponse {
  bool success = 1;
}

message MetaDeleteTemplateParams {
  string id = 1;
  string templateName = 2;
}

message MetaDeleteWhatsappTemplateResponse {
  bool success = 1;
}

message MetaListTemplatesParams {
  repeated string fields = 1;
  int32 limit = 2;
}

message MetaListTemplatesData {
  string name = 1;
  string status = 2;
  string id = 3;
}

message MetaPaginationCursor {
  string before = 1;
  string after = 2;
}

message MetaPagination {
  MetaPaginationCursor cursors = 1;
  string next = 2;
}

message MetaListTemplatesResponse {
  repeated MetaListTemplatesData data = 1;
  MetaPagination paging = 2;
}

message MetaCreateTemplateResponse {
  string id = 1;
  string status = 2;
  string category = 3;
}

message MetaCreateTemplateBody {
  string name = 1;
  Category category = 2;
  string parameter_format = 3;
  string language = 4;
  repeated MetaTemplateComponent components = 5;
}

message MetaTemplateComponent {
  string type = 1;
  string format = 2;
  string text = 3;
  repeated MetaTemplateButton buttons = 4;
  MetaTemplateComponentExample example = 5;
}

message MetaTemplateButton {
  string type = 1;
  string text = 2;
  string url = 3;
  string phone_number = 4;
}

message MetaTemplateComponentExample {
  repeated string header_text = 1;
  repeated string body_text = 2;
}

message MetaSendWhatsappMessageWithTemplateResponse {
  string messaging_product = 1;
  repeated MetaContact contacts = 2;
  repeated MetaMessage messages = 3;
}

message MetaContact {
  string input = 1;
  string wa_id = 2;
}

message MetaMessage {
  string id = 1;
}

message MetaSendWhatsappMessageBody {
  string messaging_product = 1;
  string recipient_type = 2;
  string to = 3;
  string type = 4;
  MetaTemplate template = 5;
}

message MetaTemplate {
  string namespace = 1;
  string name = 2;
  MetaLanguage language = 3;
  repeated MetaComponent components = 4;
}

message MetaLanguage {
  string code = 1;
}

message MetaComponent {
  string type = 1;
  repeated MetaParameter parameters = 2;
}

message MetaParameter {
  string type = 1;
  string text = 2;
  MetaCurrency currency = 3;
  MetaButton button = 4;
}

message MetaButton {
  string type = 1;
  string payload = 2;
  string text = 3;
}

message MetaCurrency {
  string fallback_value = 1;
  string code = 2;
  double amount_1000 = 3;
}

service WhatsappService {
  rpc SendWhatsappMessage(MetaSendWhatsappMessageBody) returns (MetaSendWhatsappMessageWithTemplateResponse);
  rpc CreateWhatsappTemplate(MetaCreateTemplateBody) returns (MetaCreateTemplateResponse);
  rpc ListWhatsappTemplates(MetaListTemplatesParams) returns (MetaListTemplatesResponse);
  rpc DeleteWhatsappTemplate(MetaDeleteTemplateParams) returns (MetaDeleteWhatsappTemplateResponse);
  rpc EditWhatsappTemplate(MetaEditTemplateBody) returns (MetaEditTemplateResponse);
}